[gd_scene load_steps=14 format=3 uid="uid://cpddwnffvkcgu"]

[ext_resource type="Script" path="res://scenes/enemies/enemy_grounded.gd" id="1_l2tby"]
[ext_resource type="Texture2D" uid="uid://bo7xaupqyaojq" path="res://assets/player/player_idle_an.png" id="2_0cywg"]
[ext_resource type="Shader" path="res://scenes/enemies/distortion.gdshader" id="3_7b4ym"]
[ext_resource type="AudioStream" uid="uid://dvqjgddh7j37p" path="res://assets/sfx/enemy/enemy_death_sfx.mp3" id="4_nspeg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86s5u"]
shader = ExtResource("3_7b4ym")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/force = 0.1
shader_parameter/size = null
shader_parameter/thickness = 0.1

[sub_resource type="Animation" id="Animation_1uu13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_86s5u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j1uvc"]
resource_name = "distortion_vfx"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_86s5u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.4001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.37, 0.45, 0.5, 0.55, 0.6, 0.6, 0.62]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q33ie"]
_data = {
"RESET": SubResource("Animation_1uu13"),
"distortion_vfx": SubResource("Animation_j1uvc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_yrvh7"]
atlas = ExtResource("2_0cywg")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_1sjp7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrvh7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eiqsm"]
size = Vector2(92, 187)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpu30"]
size = Vector2(99, 193)

[sub_resource type="CircleShape2D" id="CircleShape2D_14u2w"]
radius = 663.505

[node name="EnemyGrounded" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource("1_l2tby")

[node name="Distortion" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_86s5u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="DistortionVFXPlayer" type="AnimationPlayer" parent="Distortion"]
libraries = {
"": SubResource("AnimationLibrary_q33ie")
}

[node name="Animation" type="AnimatedSprite2D" parent="."]
z_index = 3
sprite_frames = SubResource("SpriteFrames_1sjp7")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 32.5)
shape = SubResource("RectangleShape2D_eiqsm")

[node name="HorizontalRayCast" type="RayCast2D" parent="."]
target_position = Vector2(200, 0)
collision_mask = 10

[node name="VerticalRayCastL" type="RayCast2D" parent="."]
position = Vector2(-45, 90)
collision_mask = 11

[node name="VerticalRayCastR" type="RayCast2D" parent="."]
position = Vector2(45, 90)
collision_mask = 11

[node name="FlipCooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="TriggerArea" type="Area2D" parent="."]

[node name="TriggerAreaShape" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0.5, 31.5)
shape = SubResource("RectangleShape2D_qpu30")

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackAreaShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0.5, 31.5)
shape = SubResource("CircleShape2D_14u2w")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="DeathAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nspeg")

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.999999, 29)
scale = Vector2(3.7, 5.7)

[connection signal="area_entered" from="TriggerArea" to="." method="_on_trigger_area_area_entered"]
[connection signal="area_exited" from="TriggerArea" to="." method="_on_trigger_area_area_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
